<resources>
    <string name="app_name">NewsApp</string>

    <string name="internet_connection_error">Check your internet connection</string>
    <string name="menu_home">Home</string>
    <string name="menu_bookmarked">Bookmarked</string>

    <string name="articles">Articles</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="password">Password</string>
    <string name="title_log_in">Log In</string>
    <string name="hint_login_continue">Please login to continue</string>
    <string name="news_app">News App</string>
    <string name="username">username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_to_continue">Login to Continue</string>

    <string name="title1">My own Free tools website</string>
    <string name="title2">I Publish my free tools website you can access it from hereTools  Available Keyword Reasearch ToolGdrive Direct Link GeneratorWord CounterXml Sitemap Generator</string>
    <string name="author1">noreply@blogger.com (Unknown)</string>
</resources>