<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageviewAppIcon"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:src="@drawable/ic_news"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textviewLoginDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/news_app"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_35ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageviewAppIcon" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edittextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/bg_rounded"
                    android:hint="@string/username"
                    android:paddingStart="@dimen/_10sdp"

                    android:singleLine="true"
                    android:textSize="@dimen/_15ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textviewLoginDesc"
                    tools:text="@string/username" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edittextMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_rounded"
                    android:hint="string/mobileNumber"
                    android:inputType="number"
                    android:paddingStart="@dimen/_10sdp"
                    android:singleLine="true"

                    android:textSize="@dimen/_15ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edittextUsername"
                    tools:text="string/mobileNumber" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edittextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:background="@drawable/bg_rounded"
                    android:hint="@string/password"
                    android:inputType="textPassword"

                    android:longClickable="false"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_15ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edittextMobileNo"
                    tools:text="string/password" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textviewForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:gravity="end"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/forgot_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edittextPassword" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textviewLoginToContinue"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/bg_rounded_dark"
                    android:gravity="center"
                    android:paddingStart="@dimen/_10sdp"
                    android:text="@string/login_to_continue"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textviewForgotPassword" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
